--- a/ZoomVideoSDKScreenShare.xcframework/Info.plist
+++ b/ZoomVideoSDKScreenShare.xcframework/Info.plist
@@ -22,6 +22,20 @@
 			<key>BinaryPath</key>
 			<string>ZoomVideoSDKScreenShare.framework/ZoomVideoSDKScreenShare</string>
 			<key>LibraryIdentifier</key>
+			<string>xros-arm64</string>
+			<key>LibraryPath</key>
+			<string>ZoomVideoSDKScreenShare.framework</string>
+			<key>SupportedArchitectures</key>
+			<array>
+				<string>arm64</string>
+			</array>
+			<key>SupportedPlatform</key>
+			<string>xros</string>
+		</dict>
+		<dict>
+			<key>BinaryPath</key>
+			<string>ZoomVideoSDKScreenShare.framework/ZoomVideoSDKScreenShare</string>
+			<key>LibraryIdentifier</key>
 			<string>ios-arm64_x86_64-simulator</string>
 			<key>LibraryPath</key>
 			<string>ZoomVideoSDKScreenShare.framework</string>
@@ -32,6 +46,22 @@
 			</array>
 			<key>SupportedPlatform</key>
 			<string>ios</string>
+			<key>SupportedPlatformVariant</key>
+			<string>simulator</string>
+		</dict>
+		<dict>
+			<key>BinaryPath</key>
+			<string>ZoomVideoSDKScreenShare.framework/ZoomVideoSDKScreenShare</string>
+			<key>LibraryIdentifier</key>
+			<string>xros-arm64-simulator</string>
+			<key>LibraryPath</key>
+			<string>ZoomVideoSDKScreenShare.framework</string>
+			<key>SupportedArchitectures</key>
+			<array>
+				<string>arm64</string>
+			</array>
+			<key>SupportedPlatform</key>
+			<string>xros</string>
 			<key>SupportedPlatformVariant</key>
 			<string>simulator</string>
 		</dict>
