--- a/zm_annoter_dynamic.xcframework/Info.plist
+++ b/zm_annoter_dynamic.xcframework/Info.plist
@@ -35,6 +35,36 @@
 			<key>SupportedPlatform</key>
 			<string>ios</string>
 		</dict>
+		<dict>
+			<key>BinaryPath</key>
+			<string>zm_annoter_dynamic.framework/zm_annoter_dynamic</string>
+			<key>LibraryIdentifier</key>
+			<string>xros-arm64-simulator</string>
+			<key>LibraryPath</key>
+			<string>zm_annoter_dynamic.framework</string>
+			<key>SupportedArchitectures</key>
+			<array>
+				<string>arm64</string>
+			</array>
+			<key>SupportedPlatform</key>
+			<string>xros</string>
+			<key>SupportedPlatformVariant</key>
+			<string>simulator</string>
+		</dict>
+		<dict>
+			<key>BinaryPath</key>
+			<string>zm_annoter_dynamic.framework/zm_annoter_dynamic</string>
+			<key>LibraryIdentifier</key>
+			<string>xros-arm64</string>
+			<key>LibraryPath</key>
+			<string>zm_annoter_dynamic.framework</string>
+			<key>SupportedArchitectures</key>
+			<array>
+				<string>arm64</string>
+			</array>
+			<key>SupportedPlatform</key>
+			<string>xros</string>
+		</dict>
 	</array>
 	<key>CFBundlePackageType</key>
 	<string>XFWK</string>
